--- a/assets/latex/preamble.sty
+++ b/assets/latex/preamble.sty
@@ -288,11 +288,11 @@
 \newcommand{\notdivides}{\nmid}
 \newcommand{\powerset}{\mathscr{P}}
 
-\renewcommand{\Pr}{\operatorname{\mathbb{P}}\mathopen{}\qty}  % Probability
+\renewcommand{\Pr}{\operatorname{\mathbb{P}}\mathopen{}\opbraces{}}  % Probability
 \WithSuffix\newcommand\Pr*{\operatorname{\mathbb{P}}\mathopen{}}  % Probability (no qty)
-\newcommand{\Exp}{\operatorname{\mathbb{E}}\mathopen{}\qty}  % Expected value
+\newcommand{\Exp}{\operatorname{\mathbb{E}}\mathopen{}\opbraces{}}  % Expected value
 \WithSuffix\newcommand\Exp*{\operatorname{\mathbb{E}}\mathopen{}}  % Expected value (no qty)
-\newcommand{\LLSE}{\operatorname{\mathbb{L}}\mathopen{}\qty}  % Linear least squares estimator
+\newcommand{\LLSE}{\operatorname{\mathbb{L}}\mathopen{}\opbraces{}}  % Linear least squares estimator
 \WithSuffix\newcommand\LLSE*{\operatorname{\mathbb{L}}\mathopen{}}  % Linear least squares estimator (no qty)
 \DeclareMathOperator{\Var}{Var}  % Variance
 \DeclareMathOperator{\Cov}{Cov}  % Covariance
@@ -506,10 +506,14 @@
     \begin{adjustwidth}{1.25em}{1.25em}
         \color{blue!80!black}
         \tikzset{color=blue!80!black}
-        \setminted{bgcolor=blue!3!white}
+        \ifopt@minted
+            \setminted{bgcolor=blue!3!white}
+        \fi
         }{%
         \tikzset{color=black}
-        \setminted{bgcolor=lstbgcolor}
+        \ifopt@minted
+            \setminted{bgcolor=lstbgcolor}
+        \fi
     \end{adjustwidth}
 }
 
