--- a/assets/latex/preamble.sty
+++ b/assets/latex/preamble.sty
@@ -21,6 +21,7 @@
 \newif\ifoptgroup@homework\optgroup@homeworkfalse
 \newif\ifoptgroup@lecture\optgroup@lecturefalse
 \newif\ifoptgroup@cheatsheet\optgroup@cheatsheetfalse
+\newif\ifoptgroup@beamer\optgroup@beamerfalse
 
 % declare options
 
@@ -45,6 +46,7 @@
 \DeclareOption{notcbtheorems}{\opt@tcbtheoremsfalse}
 \DeclareOption{nocheatsheetlengths}{\opt@cheatsheetlengthsfalse}
 \DeclareOption{nosmallercomponents}{\opt@smallercomponentsfalse}
+\DeclareOption{noenumerate}{\opt@enumeratefalse}
 
 % option groups
 
@@ -72,6 +74,11 @@
     \opt@smallercomponentstrue%
 }
 
+\DeclareOption{beamer}{%
+    \optgroup@beamertrue%
+    \opt@circuitstrue%
+}
+
 \DeclareOption*{%
     \PackageWarning{preamble}{Unknown option '\CurrentOption'}
 }
@@ -82,9 +89,17 @@
 % ----- Packages -----
 
 % AMS
-\RequirePackage{amsmath, amsthm}
+\RequirePackage{amsmath}
+\ifoptgroup@beamer
+    % beamer conflicts with amsthm
+\else
+    \RequirePackage{amsthm}
+\fi
 
 % Font
+\ifoptgroup@beamer
+    \usefonttheme{professionalfonts}
+\fi
 \RequirePackage[T1]{fontenc}
 \RequirePackage{newtxtext}
 \RequirePackage[smallerops]{newtxmath}
@@ -112,17 +127,28 @@
 % Graphics
 \RequirePackage{graphicx}  % External graphics
 \RequirePackage[all]{xy}  % Diagrams
-\ifopt@narrowmargins
-    \RequirePackage[margin=0.6in, headheight=14pt, headsep=10pt]{geometry}
+\ifoptgroup@beamer
+    % geometry package already loaded; causes conflicts
 \else
-    \RequirePackage[margin=1in, headheight=14pt]{geometry}
+    \ifopt@narrowmargins
+        \RequirePackage[margin=0.6in, headheight=14pt, headsep=10pt]{geometry}
+    \else
+        \RequirePackage[margin=1in, headheight=14pt]{geometry}
+    \fi
 \fi
 \RequirePackage{xcolor}  % Colored text
+% dark green definition, as green is too bright
+\colorlet{darkgreen}{green!60!black}
+
 
 % Headers
-\RequirePackage{fancyhdr, titling}
-\RequirePackage[explicit]{titlesec}  % fancy section headers
-\RequirePackage{titletoc}
+\ifoptgroup@beamer
+    % no headers if beamer
+\else
+    \RequirePackage{fancyhdr, titling}
+    \RequirePackage[explicit]{titlesec}  % fancy section headers
+    \RequirePackage{titletoc}
+\fi
 
 % Formatting
 \RequirePackage{multicol}  % Multiple columns in document
@@ -135,6 +161,7 @@
 \RequirePackage{pdflscape}  % landscape pages
 \RequirePackage{oubraces}  % better over/under braces
 \RequirePackage{textcomp}
+\RequirePackage{soul}
 
 % multicols columnbreak vertical fill
 \let\oldcolumnbreak\columnbreak
@@ -142,6 +169,7 @@
 
 % Code input formatting
 \RequirePackage{listings}  % code environment
+\RequirePackage{lstautogobble}  % auto-gobble leading whitespace
 % Atom One Light color scheme (https://github.com/atom/atom/tree/master/packages/one-light-syntax/styles)
 \definecolor{lstfgcolor}{RGB}{56, 58, 66}  % HSL(230, 8%, 24%); black
 \definecolor{lstbgcolor}{RGB}{250, 250, 250}  % HSL(230, 1%, 98%); white
@@ -151,9 +179,11 @@
 \definecolor{lstkeywordcolor}{RGB}{166, 38, 164}  % HSL(301, 63%, 40%); purple
 \definecolor{lstlinenumbercolor}{RGB}{157, 157, 159}  % HSL(230, 1%, 62%)
 \lstset{%
+    autogobble,
     columns=fullflexible,
     numbers=left,
     upquote=true,
+    mathescape=true,
     % colors
     backgroundcolor=\color{lstbgcolor},
     basicstyle=\color{lstfgcolor}\footnotesize\ttfamily,
@@ -162,6 +192,21 @@
     stringstyle=\color{lststringcolor},
     keywordstyle=\color{lstkeywordcolor},%\bfseries,
     numberstyle=\color{lstlinenumbercolor}\ttfamily,
+}
+\lstdefinelanguage{pseudo}{
+    morekeywords={
+        % Python
+        false, true, and, assert, break, class, continue, def, elif, else, for, if, in, is, not, or, pass, return, while,
+        % Lua
+        end, repeat, do, then, function, until,
+        % Other
+        to,
+    },
+    sensitive=false,
+    morestring=[b]",
+    morestring=[b]',
+    morecomment=[l]{//},
+    morecomment=[s]{/*}{*/}
 }
 
 % Alternative code formatting with minted package
@@ -194,8 +239,13 @@
 \RequirePackage{etoolbox}  % various utilities for command creation
 
 % References
-\RequirePackage[hidelinks]{hyperref}  % Links
-\RequirePackage{cleveref}  % better references
+\ifoptgroup@beamer
+    % hyperref already loaded, cleveref doesn't work with beamer
+    \hypersetup{hidelinks}
+\else
+    \RequirePackage[hidelinks]{hyperref}  % Links
+    \RequirePackage[capitalize]{cleveref}  % better references
+\fi
 \RequirePackage{bookmark}  % hyperref extension
 
 % Tikz, pgfplots
@@ -273,15 +323,22 @@
 % ----- Math Operators -----
 
 \DeclareMathOperator{\proj}{proj}  % Projection
-\DeclareMathOperator{\Span}{span}  % Vector/Matrix Span
 \DeclareMathOperator{\range}{range}  % Range (span of columns)
+\DeclareMathOperator{\Range}{R}  % range
 \DeclareMathOperator{\Null}{N}  % Null space
 \DeclareMathOperator{\Cols}{C}  % Col space
+\DeclareMathOperator{\Ker}{Ker}  % Kernel (null space)
+\DeclareMathOperator{\Image}{Im}  % Image
 \DeclareMathOperator{\trace}{tr}
 \DeclareMathOperator{\rank}{rank}
+\DeclareMathOperator{\nullity}{null}
+\DeclareMathOperator{\Trace}{Tr}
+\newcommand{\diag}{\opbraces{\operatorname{diag}}}
 
 \DeclareMathOperator{\erf}{erf}  % Gauss error function
 \DeclareMathOperator{\corr}{corr}  % correlation
+
+\DeclareMathOperator{\sign}{sign}
 
 \DeclareMathOperator{\from}{\colon}
 \newcommand{\divides}{\mid}
@@ -294,6 +351,8 @@
 \WithSuffix\newcommand\Exp*{\operatorname{\mathbb{E}}\mathopen{}}  % Expected value (no qty)
 \newcommand{\LLSE}{\operatorname{\mathbb{L}}\mathopen{}\opbraces{}}  % Linear least squares estimator
 \WithSuffix\newcommand\LLSE*{\operatorname{\mathbb{L}}\mathopen{}}  % Linear least squares estimator (no qty)
+\newcommand{\Span}{\operatorname{span}\mathopen{}\opbraces{}}  % Vector/Matrix Span
+\WithSuffix\newcommand\Span*{\operatorname{span}\mathopen{}}  % Vector/Matrix Span (no qty)
 \DeclareMathOperator{\Var}{Var}  % Variance
 \DeclareMathOperator{\Cov}{Cov}  % Covariance
 \DeclareMathOperator{\Corr}{Corr}  % Correlation
@@ -304,6 +363,7 @@
 \newcommand{\va}[1]{\vec{\bm{#1}}}  % Vector with italic bold
 \newcommand{\mat}[1]{\mathbf{#1}}  % Matrix variable
 \newcommand{\dd}{\dl3}
+\WithSuffix\newcommand\dd*{\dl0}  % derivative d without any prior space (to be used by itself with inline text)
 \newcommand{\ddel}{\dl.delta.3}
 \newcommand{\ddp}{\dl.p.3}
 \newcommand{\definedas}{\coloneqq}
@@ -337,6 +397,10 @@
 \DeclareMathOperator{\Norm}{\mathcal{N}}
 \DeclareMathOperator{\PP}{PP}
 \DeclareMathOperator{\Erlang}{Erlang}
+
+% Redefine symbols
+\let\oldemptyset\emptyset
+\let\emptyset\varnothing
 
 % ----- Commands -----
 
@@ -383,6 +447,12 @@
         \subfile{#2\formatidx.tex}
     }
 }
+
+% system of equations with systeme, but aligning on the right side
+\NewDocumentCommand{\systemeright}{ >{\SplitList{,}} m m }{%
+    \left\{\begin{aligned}\ProcessList{#1}{\systemeright@aligned}\end{aligned}\sysdelim..\systeme{#2}\right.
+}
+\NewDocumentCommand{\systemeright@aligned}{m}{#1&=\\}
 
 % ----- Theorems -----
 
@@ -456,19 +526,23 @@
         \oldendproof
     }
     % cleveref definitions
-    \crefname{tcb@cnt@tcbexample}{example}{examples}
+    % \crefname{tcb@cnt@tcbexample}{example}{examples}
     \Crefname{tcb@cnt@tcbexample}{Example}{Examples}
-    \crefname{tcb@cnt@tcbdefinition}{definition}{definitions}
+    % \crefname{tcb@cnt@tcbdefinition}{definition}{definitions}
     \Crefname{tcb@cnt@tcbdefinition}{Definition}{Definitions}
-    \crefname{tcb@cnt@tcbtheorem}{theorem}{theorems}
+    % \crefname{tcb@cnt@tcbtheorem}{theorem}{theorems}
     \Crefname{tcb@cnt@tcbtheorem}{Theorem}{Theorems}
-    \crefname{tcb@cnt@tcblemma}{lemma}{lemmas}
+    % \crefname{tcb@cnt@tcblemma}{lemma}{lemmas}
     \Crefname{tcb@cnt@tcblemma}{Lemma}{Lemmas}
 \else
-    % plain theorems
-    \newtheorem{theorem}{Theorem}[section]
-    \newtheorem{lemma}{Lemma}[section]
-    \newtheorem{definition}{Definition}[section]
+    \ifoptgroup@beamer
+        % beamer overrides theorem environments
+    \else
+        % plain theorems
+        \newtheorem{theorem}{Theorem}[section]
+        \newtheorem{lemma}{Lemma}[section]
+        \newtheorem{definition}{Definition}[section]
+    \fi
 \fi
 
 % Fancy section titles
@@ -501,13 +575,14 @@
 \fi
 
 % ----- Environments -----
-
+\colorlet{answercolor}{blue!80!black}
+\colorlet{mintedanswercolor}{blue!3!white}
 \newenvironment{answer}{%
     \begin{adjustwidth}{1.25em}{1.25em}
-        \color{blue!80!black}
-        \tikzset{color=blue!80!black}
+        \color{answercolor}
+        \tikzset{color=answercolor}
         \ifopt@minted
-            \setminted{bgcolor=blue!3!white}
+            \setminted{bgcolor=mintedanswercolor}
         \fi
         }{%
         \tikzset{color=black}
@@ -553,4 +628,8 @@
 
     % lengths for enumerate lists
     \setlist{nosep, leftmargin=10pt}
+\fi
+
+\ifoptgroup@beamer
+    \pdfstringdefDisableCommands{\def\translate#1{#1}}  % \translate causes warning
 \fi
